--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/fmw666/gitbook-plugin-todo.git"
+    "url": "git+https://github.com/fmw666/gitbook-plugin-todo.git"
   },
   "bugs": {
     "url": "https://github.com/fmw666/gitbook-plugin-todo/issues"
