--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "author": "fmw666",
   "license": "MIT",
   "dependencies": {
-    "cheerio": "^0.19.0",
+    "cheerio": "^1.0.0-rc.12",
     "underscore": "^1.8.3"
   },
   "devDependencies": {},
